<resources>
    <string name="app_name">ThermoLed Mobile Client</string>
    <string name="get_temperature">Get Temperature</string>
    <string name="led_on">Led On</string>
    <string name="temperature_will_show_here">Temperature will show here</string>
    <string name="host_hint">HOST</string>
    <string name="port_hint">PORT</string>
    <string name="led_off">Led Off</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="text_view_mean">Mean</string>
    <string name="mean_text">0</string>
    <string name="last_10_temperatures">Last 10 temperatures</string>
    <string name="last_temperature">0</string>
    <string name="temperatures">TEMPERATURES</string>
    <string name="login_text">Login:</string>
    <string name="user_1">USER 1</string>
    <string name="led_green">LED GREEN</string>
    <string name="led_red">LED RED</string>
    <string name="light_levels">LIGHT LEVELS</string>
    <string name="user_2">USER 2</string>
    <string name="user_3">USER 3</string>
    <string name="show_light_levels">Show Light Levels</string>
    <string name="show_temperatures">Show temperatures</string>
    <string name="green_led">Green Led</string>
    <string name="red_led">Red Led</string>
    <string name="last_10_light_levels">Last 10 light levels</string>
    <string name="last_light_level">0</string>
</resources>
