<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_azul"
    tools:context=".AdminActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/user1TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/user_1"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchLight1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:minHeight="48dp"
                android:text="@string/light_levels"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchtTemp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:minHeight="48dp"
                android:text="@string/temperatures"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchLedGreen1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:minHeight="48dp"
                android:text="@string/led_green"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchLedRed1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:minHeight="48dp"
                android:text="@string/led_red"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/user2TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/user_2"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchLight2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:minHeight="48dp"
                android:text="@string/light_levels"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchtTemp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:minHeight="48dp"
                android:text="@string/temperatures"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchLedGreen2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:minHeight="48dp"
                android:text="@string/led_green"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchLedRed2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:minHeight="48dp"
                android:text="@string/led_red"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/user3TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/user_3"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchLight3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:minHeight="48dp"
                android:text="@string/light_levels"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchtTemp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="1dp"
                android:minHeight="48dp"
                android:text="@string/temperatures"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchLedGreen3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:minHeight="48dp"
                android:text="@string/led_green"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchLedRed3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:minHeight="48dp"
                android:text="@string/led_red"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>